# sast2023-linux-git

./: Dockerfile  README.md  flags.json  handout.bib  handout.tex  mime.types  nginx.conf
backend/: Cargo.toml
backend/src/: db.rs  flags.rs  main.rs  query.rs  submit.rs  util.rs
coding/: classification.cpp  envir.cpp  linux.cpp  make_cipher.py  sha256.h  text
files/: hostname  sources.list
frontend/: .eslintrc  build.js  package.json  rollup.config.js  tsconfig.json
frontend/patches/: rollup+3.25.3.patch  rollup+3.26.0.patch  rollup+3.26.1.patch  rollup+3.26.2.patch  rollup-plugin-esbuild+5.0.0.patch
frontend/public/: leaderboard.html
frontend/src/: buffer.ts  index.tsx  menu.ts
frontend/src/components/: LeaderBoardEntryRow.tsx  StandingsTable.tsx
frontend/src/components/util/: ErrorMessage.tsx  Header.tsx  Pagination.tsx  ProgressGradient.tsx  TableLoader.tsx  WithCode.tsx
frontend/src/libs/api/: leaderboard.ts  url.ts
frontend/src/models/: global.d.ts  leaderboard.d.ts
frontend/src/pages/: main.tsx
frontend/src/styles/: leaderboard.css  main.css
frontend/src/util/: date.ts  leaderboard.ts  nt.ts  string.ts  type.ts  web.ts
home/nana/mails/: New_Employee.txt
home/train/: .gitconfig
home/train/git/: README.md
home/train/git/dot-git/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
home/train/mails/: Welcome_Back.txt
home/train/puzzles/.hidden-files/: .are-starting-with-a-dot  .hidden-files
home/train/puzzles/Ripes/: Ripes
home/train/puzzles/apt/: apt
home/train/puzzles/classification/: .gitattributes  classification
(+14 files in other folders)
