[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
mime = "0.3.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = "1.29.0"
tokio-postgres = { version = "0.7.8", features = [] }

[[bin]]
name = "backend"
path = "src/main.rs"
