[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
mime = "0.3.17"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
tokio = "1.29.1"
tokio-postgres = { version = "0.7.8", features = [] }

[[bin]]
name = "backend"
path = "src/main.rs"
